[package]
name = "pqready"
version = "0.1.0"
edition = "2021"
description = "A cross-platform CLI tool to test for quantum-secure TLS/HTTPS encryption support"
authors = ["Devin Egan <github@devinegan.com>"]
license = "MIT"
repository = "https://github.com/degan/pqready"
homepage = "https://github.com/degan/pqready"
documentation = "https://docs.rs/pqready"
keywords = ["quantum", "cryptography", "tls", "security", "post-quantum"]
categories = ["command-line-utilities", "cryptography", "network-programming"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.25"
colored = "2.1"
anyhow = "1.0"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
